--- a/mvp/src/main/res/values/styles.xml
+++ b/mvp/src/main/res/values/styles.xml
@@ -5,4 +5,15 @@
         <item name="android:windowBackground">@color/white</item>
         <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
     </style>
+
+    <style name="loading_dialog" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">false</item><!--半透明-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 </resources>
