--- a/mvp/src/main/res/values/color.xml
+++ b/mvp/src/main/res/values/color.xml
@@ -6,4 +6,5 @@
     <color name="reader_menu_bg_color">#191919</color>
     <color name="common_search_color">#f4f4f5</color>
     <color name="text_color_gray">#bfbfc0</color>
+    <color name="color_toolbar">#3fbfcc</color>
 </resources>
