--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGray">#575757</color>
     <color name="colorRed">#f77386</color>
+    <color name="colorLightGray">#808080</color>
+    <color name="colorSplineSpace">#f4f4f5</color>
+    <color name="colorSplineLine">#c9c9c9</color>
 </resources>
