--- a/mvp/src/main/res/layout/common_recyclerview.xml
+++ b/mvp/src/main/res/layout/common_recyclerview.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <com.chengx.mvp.widget.pull2refresh.PullToRefreshRecyclerView
-
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -26,6 +25,7 @@
         android:layout_height="match_parent"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tipView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
