--- a/mvp/src/main/res/layout/common_toolbar.xml
+++ b/mvp/src/main/res/layout/common_toolbar.xml
@@ -6,8 +6,8 @@
         android:id="@+id/common_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:minHeight="150px">
+        android:background="@color/color_toolbar"
+        android:minHeight="135px">
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,22 +20,8 @@
                 android:textSize="15sp"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
-                android:text=""/>
+                android:text="哈哈"/>
         </FrameLayout>
-        <TextView
-            android:id="@+id/searchBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="81px"
-            android:layout_gravity="center"
-            android:paddingLeft="33px"
-            android:minWidth="900px"
-            android:gravity="center_vertical"
-            android:textColor="@color/text_color_gray"
-            android:textSize="12sp"
-            android:drawablePadding="6dp"
-            android:drawableLeft="@drawable/ic_search"
-            android:background="@drawable/shape_gray_conner"
-            android:text="@string/text_search_hint"/>
+
     </com.chengx.mvp.widget.auto.AutoToolbar>
 </merge>
