--- a/mvp/src/main/res/values/styles.xml
+++ b/mvp/src/main/res/values/styles.xml
@@ -2,8 +2,10 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/white</item>
 
     </style>
+
 
     <style name="loading_dialog" parent="android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
