--- a/app/src/main/res/layout/layout_common_search.xml
+++ b/app/src/main/res/layout/layout_common_search.xml
@@ -8,12 +8,10 @@
     <TextView
         android:visibility="visible"
         android:id="@+id/searchBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="81px"
+        android:layout_width="900px"
+        android:layout_height="81px"
         android:layout_gravity="center"
         android:paddingLeft="33px"
-        android:minWidth="900px"
         android:gravity="center_vertical"
         android:textColor="@color/text_color_gray"
         android:textSize="12sp"
