--- a/app/src/main/res/layout/layout_main_bottom.xml
+++ b/app/src/main/res/layout/layout_main_bottom.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/selector_btn_main_featured"
-        android:drawablePadding="15px"
+        android:drawablePadding="5dp"
         android:textSize="27px"
         android:textColor="@drawable/selector_main_tab_text_color"
         android:text="@string/text_featured"/>
@@ -23,7 +23,7 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/selector_btn_main_stacks"
-        android:drawablePadding="15px"
+        android:drawablePadding="5dp"
         android:textSize="27px"
         android:textColor="@drawable/selector_main_tab_text_color"
         android:text="@string/text_stacks"/>
@@ -34,7 +34,7 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/selector_btn_main_search"
-        android:drawablePadding="15px"
+        android:drawablePadding="5dp"
         android:textSize="27px"
         android:textColor="@drawable/selector_main_tab_text_color"
         android:text="@string/text_search"/>
@@ -45,7 +45,7 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/selector_btn_main_find"
-        android:drawablePadding="15px"
+        android:drawablePadding="5dp"
         android:textSize="27px"
         android:textColor="@drawable/selector_main_tab_text_color"
         android:text="@string/text_find"/>
@@ -56,7 +56,7 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/selector_btn_main_user"
-        android:drawablePadding="15px"
+        android:drawablePadding="5dp"
         android:textSize="27px"
         android:textColor="@drawable/selector_main_tab_text_color"
         android:text="@string/text_mine"/>
