--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorLightGray">#808080</color>
     <color name="colorSplineSpace">#f4f4f5</color>
     <color name="colorSplineLine">#c9c9c9</color>
+    <color name="colorGrayText">#bfbfc0</color>
 </resources>
