--- a/mvp/src/main/res/layout/common_toolbar.xml
+++ b/mvp/src/main/res/layout/common_toolbar.xml
@@ -20,7 +20,7 @@
                 android:textSize="15sp"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
-                android:text="哈哈"/>
+                android:text=""/>
         </FrameLayout>
 
     </com.chengx.mvp.widget.auto.AutoToolbar>
