--- a/app/src/main/res/layout/fragment_stacks.xml
+++ b/app/src/main/res/layout/fragment_stacks.xml
@@ -49,9 +49,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:gravity="center_vertical">
                     <TextView
+                        android:id="@+id/clickRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -62,6 +62,7 @@
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_click"/>
                     <TextView
+                        android:id="@+id/subRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -72,6 +73,7 @@
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_sub"/>
                     <TextView
+                        android:id="@+id/collectRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -82,6 +84,7 @@
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_col"/>
                     <TextView
+                        android:id="@+id/recRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -99,6 +102,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/newRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -109,6 +113,7 @@
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_new"/>
                     <TextView
+                        android:id="@+id/completeRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -119,6 +124,7 @@
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_com"/>
                     <TextView
+                        android:id="@+id/updateRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -129,6 +135,7 @@
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_update"/>
                     <TextView
+                        android:id="@+id/rewardRankBtn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -188,6 +195,7 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorSplineLine"/>
                     <TextView
+                        android:id="@+id/stacksModernBtn"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -203,6 +211,7 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorSplineLine"/>
                     <TextView
+                        android:id="@+id/stacksAncientBtn"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -237,6 +246,7 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorSplineLine"/>
                     <TextView
+                        android:id="@+id/stacksFantasyLoveBtn"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -252,6 +262,7 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorSplineLine"/>
                     <TextView
+                        android:id="@+id/stacksSchoolBtn"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -286,6 +297,7 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorSplineLine"/>
                     <TextView
+                        android:id="@+id/stacksFantasyBtn"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -301,6 +313,7 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorSplineLine"/>
                     <TextView
+                        android:id="@+id/stacksCityBtn"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
