--- a/app/src/main/res/layout/item_label.xml
+++ b/app/src/main/res/layout/item_label.xml
@@ -20,4 +20,62 @@
         android:textColor="@color/colorGray"
         android:text="主编推荐"/>
 
+    <LinearLayout
+        android:id="@+id/timerLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="37px"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/timerHourTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="30px"
+            android:paddingLeft="9px"
+            android:paddingRight="9px"
+            android:paddingTop="15px"
+            android:paddingBottom="15px"
+            android:text="05"
+            android:background="@drawable/recharge_round_backgroud"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorGray"
+            android:paddingLeft="18px"
+            android:paddingRight="18px"
+            android:text=":"/>
+        <TextView
+            android:id="@+id/timerMinuteTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="30px"
+            android:paddingLeft="9px"
+            android:paddingRight="9px"
+            android:paddingTop="15px"
+            android:paddingBottom="15px"
+            android:text="05"
+            android:background="@drawable/recharge_round_backgroud"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorGray"
+            android:paddingLeft="18px"
+            android:paddingRight="18px"
+            android:text=":"/>
+        <TextView
+            android:id="@+id/timerSecondTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="30px"
+            android:paddingLeft="9px"
+            android:paddingRight="9px"
+            android:paddingTop="15px"
+            android:paddingBottom="15px"
+            android:text="05"
+            android:background="@drawable/recharge_round_backgroud"/>
+    </LinearLayout>
+
 </LinearLayout>
