--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -96,6 +96,7 @@
                     android:layout_height="1px"
                     android:layout_weight="1"/>
                 <TextView
+                    android:id="@+id/refreshKeywordsBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16px"
