--- a/app/src/main/res/layout/item_book_type.xml
+++ b/app/src/main/res/layout/item_book_type.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="48px"
     android:paddingRight="88px">
     <ImageView
+        android:id="@+id/bookIv"
         android:layout_width="238px"
         android:layout_height="315px"
         android:scaleType="centerCrop"
@@ -25,6 +26,7 @@
             android:text="老公亲亲就过敏"
             android:layout_marginTop="28px"/>
         <TextView
+            android:id="@+id/wordCountTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@id/bookNameTv"
@@ -43,6 +45,7 @@
             android:text="豆包姑"/>
 
         <TextView
+            android:id="@+id/clickCountTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@id/authorNameTv"
@@ -51,6 +54,7 @@
             android:textSize="24px"
             android:text="9.7万人次"/>
         <TextView
+            android:id="@+id/bookDescTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/authorNameTv"
