--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -20,6 +20,7 @@
                 android:gravity="center_vertical"
                 android:background="@drawable/user_head_bg">
                 <ImageView
+                    android:id="@+id/avatarIv"
                     android:layout_width="177px"
                     android:layout_height="177px"
                     android:layout_marginLeft="108px"
