--- a/app/src/main/res/layout/item_book_detail_header.xml
+++ b/app/src/main/res/layout/item_book_detail_header.xml
@@ -94,6 +94,7 @@
             android:layout_height="1px"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/readBookBtn"
             android:layout_width="150px"
             android:layout_height="42px"
             android:textSize="33px"
