--- a/mvp/src/main/res/values/attr.xml
+++ b/mvp/src/main/res/values/attr.xml
@@ -104,4 +104,10 @@
         <attr name="tagSpacing" format="dimension"/>
         <attr name="columnSize" format="integer"/>
     </declare-styleable>
+
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+        <attr name="border_overlay" format="boolean" />
+    </declare-styleable>
 </resources>
