--- a/app/src/main/res/layout/item_book_detail_gift_label.xml
+++ b/app/src/main/res/layout/item_book_detail_gift_label.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="48px"
     android:paddingRight="48px">
     <TextView
+        android:id="@+id/giftCountTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="42px"
