--- a/app/src/main/res/layout/item_book_detail_gift_log.xml
+++ b/app/src/main/res/layout/item_book_detail_gift_log.xml
@@ -9,6 +9,7 @@
     android:gravity="center_vertical"
     >
     <TextView
+        android:id="@+id/nickNameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#969696"
@@ -20,10 +21,11 @@
         android:layout_height="1px"
         android:layout_weight="1"/>
     <ImageView
+        android:id="@+id/giftIv"
         android:layout_width="33px"
-        android:layout_height="33px"
-        android:src="@drawable/ic_gif"/>
+        android:layout_height="33px"/>
     <TextView
+        android:id="@+id/giftCountTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#969696"
