--- a/app/src/main/res/layout/item_book_detail_header.xml
+++ b/app/src/main/res/layout/item_book_detail_header.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/bookIv"
             android:layout_width="282px"
             android:layout_height="366px"
             android:scaleType="centerCrop"
@@ -46,6 +47,7 @@
                 android:textSize="33px"
                 android:text="21.8万字"/>
             <TextView
+                android:id="@+id/priceTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#818181"
@@ -54,6 +56,7 @@
                 android:text="500藤币/千字"
                 />
             <TextView
+                android:id="@+id/bookStatusTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -83,6 +86,7 @@
             android:textSize="33px"
             android:background="#ec6b8a"/>
         <TextView
+            android:id="@+id/lastReadChapterTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#818181"
@@ -116,6 +120,7 @@
             android:layout_marginTop="30px"
             android:text="作品简介："/>
         <TextView
+            android:id="@+id/bookDescTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#818181"
@@ -130,6 +135,7 @@
         android:layout_marginTop="30px"
         android:background="@color/colorSplineLine"/>
     <LinearLayout
+        android:id="@+id/chapterListBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30px"
@@ -155,6 +161,7 @@
             android:layout_marginLeft="31px"
             />
         <TextView
+            android:id="@+id/lastUpdateChapterTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8px"
