--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -135,6 +135,7 @@
         android:layout_marginTop="51px"
         android:gravity="center">
         <ImageView
+            android:id=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/btn_wx_login"/>
