--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -135,17 +135,19 @@
         android:layout_marginTop="51px"
         android:gravity="center">
         <ImageView
-            android:id=""
+            android:id="@+id/wxLoginBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/btn_wx_login"/>
         <ImageView
+            android:id="@+id/qqLoginBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="78px"
             android:src="@drawable/btn_qq_login"/>
     </LinearLayout>
     <ImageView
+        android:id="@+id/wbLoginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btn_wb_login"
