--- a/app/src/main/res/layout/item_monthly_head.xml
+++ b/app/src/main/res/layout/item_monthly_head.xml
@@ -13,6 +13,7 @@
         android:gravity="center_vertical"
         android:paddingTop="41px">
         <ImageView
+            android:id="@+id/avatarIv"
             android:layout_width="177px"
             android:layout_height="177px"
             android:src="@drawable/ic_user_avatar"
@@ -23,6 +24,7 @@
             android:layout_marginLeft="30px"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/userNameTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
@@ -40,6 +42,7 @@
             android:layout_height="1px"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/openMonthlyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
