--- a/app/src/main/res/layout/item_monthly_rank.xml
+++ b/app/src/main/res/layout/item_monthly_rank.xml
@@ -9,6 +9,7 @@
     android:paddingBottom="30px"
     android:paddingTop="30px">
     <TextView
+        android:id="@+id/rankTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="16px"
@@ -20,6 +21,7 @@
         android:textSize="30px"
         android:text="02"/>
     <TextView
+        android:id="@+id/bookNameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="36px"
@@ -31,6 +33,7 @@
         android:layout_height="1px"
         android:layout_weight="1"/>
     <TextView
+        android:id="@+id/clickCountTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#818181"
