--- a/mvp/src/main/res/layout/common_progress_view.xml
+++ b/mvp/src/main/res/layout/common_progress_view.xml
@@ -18,7 +18,7 @@
 <com.chengx.mvp.widget.loadding.LoadingView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:loadingView="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
     android:layout_gravity="center"
     loadingView:progress_style="material" />
