--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,6 +25,7 @@
                 android:paddingRight="78px"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/freeBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -36,6 +37,7 @@
                     android:text="免费"
                     />
                 <TextView
+                    android:id="@+id/monthBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -47,6 +49,7 @@
                     android:text="包月"
                     />
                 <TextView
+                    android:id="@+id/allBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -58,6 +61,7 @@
                     android:text="全本"
                     />
                 <TextView
+                    android:id="@+id/stacksBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
