--- a/app/src/main/res/layout/item_latest_read.xml
+++ b/app/src/main/res/layout/item_latest_read.xml
@@ -9,6 +9,7 @@
     android:paddingBottom="30px"
     android:gravity="center_vertical">
     <ImageView
+        android:id="@+id/bookIv"
         android:layout_width="240px"
         android:layout_height="315px"
         android:scaleType="centerCrop"
@@ -20,6 +21,7 @@
         android:layout_marginLeft="54px"
         >
         <TextView
+            android:id="@+id/bookNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
@@ -27,6 +29,7 @@
             android:singleLine="true"
             android:text="老公亲亲就过敏"/>
         <TextView
+            android:id="@+id/authorNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#808080"
@@ -34,6 +37,7 @@
             android:text="都包谷"
             android:layout_marginTop="27px"/>
         <TextView
+            android:id="@+id/readTimeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="33px"
@@ -49,11 +53,13 @@
             android:orientation="horizontal"
             android:layout_marginTop="34px">
             <ImageView
+                android:id="@+id/readBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_latest_read_open"
                 />
             <ImageView
+                android:id="@+id/delBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_latest_read_delete"
