--- a/app/src/main/res/layout/item_recharge_log.xml
+++ b/app/src/main/res/layout/item_recharge_log.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
         <TextView
+            android:id="@+id/logTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="40px"
@@ -23,6 +24,7 @@
             android:background="@color/color_spline"
             android:layout_marginLeft="24px"/>
         <TextView
+            android:id="@+id/rechargeTypeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#fa6666"
@@ -32,6 +34,7 @@
             />
     </LinearLayout>
     <TextView
+        android:id="@+id/rechargeTimeTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36px"
