--- a/app/src/main/res/layout/layout_recharge_log_header.xml
+++ b/app/src/main/res/layout/layout_recharge_log_header.xml
@@ -9,6 +9,7 @@
     android:paddingBottom="90px"
     android:gravity="center_vertical">
     <TextView
+        android:id="@+id/moneyTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
@@ -19,6 +20,7 @@
         android:layout_height="1px"
         android:layout_weight="1"/>
     <TextView
+        android:id="@+id/rechargeBtn"
         android:layout_width="207px"
         android:layout_height="48px"
         android:textSize="30px"
