--- a/app/src/main/res/layout/item_book_detail_comment.xml
+++ b/app/src/main/res/layout/item_book_detail_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -71,13 +72,12 @@
             android:text="条)"/>
     </LinearLayout>
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/reply_bg"
         android:gravity="center_vertical"
         android:orientation="vertical">
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -96,7 +96,7 @@
                     android:textSize="21px"
                     android:textColor="#959595"/>
             </LinearLayout>
-            <TextView
+        <TextView
                 android:id="@+id/replyTimeTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
