--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,6 +38,7 @@
         android:paddingLeft="48px"
         android:paddingRight="48px"
         android:singleLine="true"
+        android:inputType="textPassword"
         android:hint="密码"/>
     <LinearLayout
         android:layout_width="match_parent"
